fixing footer text alignment

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -33,4 +33,9 @@
   bottom: 0;
   width: 100%;
   height: 2.5rem;
+  text-align: center;
+}
+a.has-text-primary {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
